# MATRIX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bibliography/: README.md
docs/: INSTALL_MATRIX.md
docs/architecture/: ADR-0001-SHARED-LIBRARIES-AND-XYZ-CONTAINER.md  ADR-0002-PYTHON-FORTRAN77-BACKENDS.md  BOOTSTRAP.md  (+43 more)
matrix/: __init__.py  __main__.py
matrix_oracle/: __init__.py
oracle/: __init__.py  __main__.py
oracle_gui/: __init__.py
scripts/: matrix_env.sh  oracle_env.sh
tests/: conftest.py  test_gic_regression_corpus.py  test_lcb25.py  test_matrix_chem_topology.py  test_matrix_cli.py  test_matrix_core.py  test_matrix_dvr.py  test_matrix_fortran_neo.py  test_matrix_fragments.py  test_matrix_gaussian_jobs.py  test_matrix_gaussian_readallgic_examples.py  test_matrix_gaussian_rovib.py  test_matrix_gf.py  test_matrix_link.py  test_matrix_morpheus.py  test_matrix_neo.py  test_matrix_oracle.py  test_matrix_qm_adapters.py  test_matrix_qm_launchers.py  test_matrix_qm_sections.py  test_matrix_rovib_thermo_contracts.py  test_matrix_rovib_workflows.py  test_matrix_trinity.py  test_matrix_validation.py  test_matrix_vpt2_vci.py  test_oracle_babel.py  test_oracle_cli.py  test_oracle_core.py  test_oracle_dvr.py  test_oracle_fortran_gicforge.py  test_oracle_fragments.py  test_oracle_gaussian_jobs.py  test_oracle_gf.py  test_oracle_gicforge.py  test_oracle_gui.py  test_oracle_morpheus.py  test_oracle_qm_sections.py  test_oracle_rovib_thermo_contracts.py  test_oracle_trinity.py  test_oracle_vpt2_vci.py  (+1 more)
tools/: matrix_run.py  oracle_run.py
(+105 files in other folders)
