[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-suite"
version = "0.1.0"
description = "ORACLE computational chemistry suite monorepo"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

