[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-framework"
version = "0.1.0"
description = "MATRIX computational chemistry framework monorepo"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"
