[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-framework"
version = "0.1.0"
description = "MATRIX computational chemistry framework monorepo"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# CI currently gates correctness errors. Style-only cleanup for legacy ports,
# vendored WMS-Rot code and scientific index names is tracked separately.
select = ["E9", "F821", "F822", "F823"]
